--- a/BackgroundTrad.tex
+++ b/BackgroundTrad.tex
@@ -508,7 +508,7 @@ There have been many different approaches to verify ladder logic using different
 
 The Swansea University Railway Verification Group has produced three successful MRes theses and 2 successful PhD theses on this topic each with it's own particular focus. The original group work on the project was carried out by Kanso (See~\cite{KK08}), as part of an MRes project,  who invented an approach to translate ladder logic into propositional logic to which he then applied inductive verification using a SAT solver~\cite{KK09} an the method described in~\cite{MS00}. This approach was applied to a small academic example pelicon crossing and a real world railway interlocking program consisting of approximately 500 rungs. The work done by Kanso was extended by James in another MRes project~\cite{PJ10} that applied program slicing to reduce the size of the model checking problem and bounded model checking and temporal induction to verify the interlockings and possibly obtain a counterexample in the process. James also verified another interlocking of a similar size to the original one but with a different layout. The author verified 100 safety conditions over a solid state interlocking and modelled the railway in a modular fashion using the  \scade \, suite in the scope of his MRes thesis. A summary of the work peformed in these three theses can be found in~\cite{AL14a}. These three MRes projects were themselves inspired by far earlier work in the form of a feasibility study by Fokkink and Hollingshead~\cite{WF98}. Fokkink laid much of the logical foundation by connecting ladder logic with propositional logic and formulated a method for presenting such a ladder logic program as propositional formulae.
 
-Kanso also produced a PhD thesis~\cite{KarimPhD} which described various approaches to use the interactive theorem prover Agda as a verification platform for train control systems. This thesis also describes a unique way of combining interactive and automatic theorem provers in a lazy fashion such that a proof object was constructed in Agda for the automatic proof as well as the interactive proof \cite{KarimPaper}. Lemmas were proven that showed high level safety properties such as "two trains do not crash" can be proven from low level properties that refer to  signalling principles. These high level lemmas were proven once interactively and hold for all track plans. Using these high level lemmas, automatic theorem provers could then prove safety for a given railway by automatically verifying a set of safety properties referring to signalling principles.
+Kanso also produced a PhD thesis~\cite{KarimPhD} which described various approaches to use the interactive theorem prover Agda as a verification platform for train control systems. This thesis also describes a unique way of combining interactive and automatic theorem provers in a lazy fashion such that a proof object was constructed in Agda for the automatic proof as well as the interactive proof \cite{KarimPaper}. Lemmas were proven that showed high level safety properties such as "two trains do not crash" can be proven from low level properties that refer to  signalling principles. These high level lemmas were proven once interactively and hold for all track plans. Automatic theorem provers could then prove safety for a given railway by automatically verifying a set of safety properties referring to signalling principles.
 
 James in his thesis went on to work on domain specific languages for railway verification and delivered a platform which could verify graphical track plans from the railway domain automatically~\cite{PhilPhD}.
 
