--- a/lit.bib
+++ b/lit.bib
@@ -945,6 +945,16 @@
   timestamp = {2014.03.22}
 }
 
+@PHDTHESIS{PhilPhD,
+  author = {Phillip James},
+  title = {Designing domain specific lanaguages for verification and applications
+	to the railway domain},
+  school = {Swansea University},
+  year = {2014},
+  owner = {andylawrence},
+  timestamp = {2014.08.19}
+}
+
 @ARTICLE{PJ10,
   author = {James, P.},
   title = {{SAT}-{B}ased {M}odel {C}hecking and its {A}pplications to {T}rain
@@ -1003,6 +1013,14 @@
   pages = {19--31},
   number = {2},
   publisher = {Elsevier}
+}
+
+@ARTICLE{KarimPaper,
+  author = {Kanso, K. and Setzer, A.},
+  title = {A light-weight integration of automated and interactive theorem proving},
+  journal = {Submitted to Mathematical Structures in Computer Science},
+  owner = {andylawrence},
+  timestamp = {2014.08.19}
 }
 
 @INPROCEEDINGS{HK96,
