--- a/ECLSA.tex
+++ b/ECLSA.tex
@@ -565,6 +565,9 @@ This is proven by using Lemma \ref{lem:compgen} to generate a complete set of cl
 \end{mycorollary}
 
 \section{Formalising a Soudness and Completeness of the Modified DPLL and Resolution Proof Systems in Minlog}
+We shall now describe how the soundness and completeness for the modified DPLL and resolutions proof systems, along with their soundness and complete, are formalised in the Minlog system. The formalisation is based on the Minlog formalisation for the DPLL proof system describe in \ref{chapter:dpllminlog}; the basic operations such as those on sets have been reused where possible.
+
+
 
 \section{Behaviour of Prototype Clause Learning Algorithm}
 In the following we shall describe the behaviour of the prototype clause learning algorithm when applied to some simple examples. This prototype has had $\forallnc$ quantifiers inserted to reduce the amount of redundant computational content and the overall size of the proof generated. We can apply the solver to a small example formula containing two unit clauses as follows:
@@ -586,8 +589,9 @@ We modelled the completeness statement of this solver using Minlog's built in in
 (CC ((Pos (Variable11))::(Pos (Variable12)):))::(CC ((Pos (Variable21))::(Pos (Variable22)):))::(CC ((Pos (Variable31))::(Pos (Variable32)):))::(CC ((Neg (Variable11))::(Neg (Variable21)):))::(CC ((Neg (Variable11))::(Neg (Variable31)):))::(CC ((Neg (Variable21))::(Neg (Variable31)):))::(CC ((Neg (Variable12))::(Neg (Variable22)):))::(CC ((Neg (Variable12))::(Neg (Variable32)):))::(CC ((Neg (Variable22))::(Neg (Variable32)):)):) )") )))}
 \end{center}
 
-This results in the following output:
-\begin{lstlisting}
+This results in the output seen in Code Listing \ref{cl:cdclphp32}.  We see that the solver has learned two clauses. The clause \texttt{(CC (Neg (Variable 32)):)} comes from the first branch of the proof where the literal \texttt{(Pos (Variable 32))} was used in an application of the $\Split$ rule. This learned unit clause was then used in subsequent unit resolution derivations of the second branch of the proof resulting in the empty clause \texttt{CC(Nil lit)} being learned.  This use of the unit clauses before assignments from the $\Split$ rule results in shorter learned clauses which better aid the subsequent proof search.
+\newpage
+\begin{lstlisting}[caption = The Modified DPLL Proof that PHP(3\,2) is Unsatisfiable, label = cl:cdclphp32] 
 (InR for@@algmodDPLL (lit=>boole)@@(cla=>lit))
 (CF(CC(Nil lit)::(CC(Neg(Variable 32)):):)@
 CmodDPLLTwo(Pos(Variable 32))
@@ -627,8 +631,6 @@ CmodDPLLTwo(Pos(Variable 32))
 (CunitResThree(Neg(Variable 12))(CunitResOne(Pos(Variable 12))1)
 (CunitResZero(CC(Neg(Variable 12)::(Neg(Variable 22)):))))))))))))
 \end{lstlisting}
-
-Here we see that the solver has learned two clauses. The clause \texttt{(CC (Neg (Variable 32)):)} comes from the first branch of the proof where the literal \texttt{(Pos (Variable 32))} was used in an application of the $\Split$ rule. This learned unit clause was then used in subsequent unit resolution derivations of the second branch of the proof resulting in the empty clause \texttt{CC(Nil lit)} being learned.  This use of the unit clauses before assignments from the $\Split$ rule results in shorter learned clauses which better aid the subsequent proof search.
 
 
 
