--- a/verifyertms.tex
+++ b/verifyertms.tex
@@ -139,7 +139,7 @@ eq {REST < O1 : Train | speed : N1 >} |= train-s(O1,N1') =
    (N1 == N1')  .
 \end{lstlisting}
 
-Here the natural number N1 in the train object is matched with N1' in the predicate train-s. This can be used to state that train1 does not exceed its maximum speed in any state in the pentagon  example that is reachable in 30 time steps using the following command:
+Here the natural number N1 in the train object is matched with N1' in the predicate train-s. This can be used to state that train1 does not exceed its maximum speed in any state in the pentagon  example that is reachable in 100 time steps using the following command:
 
 \begin{center}
 \texttt{(mc initialstate2 |=t  ~(<> train-s(train1,5)) in time <= 100 .)}
@@ -147,7 +147,7 @@ Here the natural number N1 in the train object is matched with N1' in the predic
 
 The resulting output from the model checker shows that the property has been proven true in 230 seconds:
 
-\begin{lstlisting}
+\begin{lstlisting}[caption = The result of model checking the max speed property for train1 ]
 rewrites: 66202099 in 229900ms cpu (229901ms real) 
 (287960 rewrites/second)
 Model check initialstate2 |=t ~ <> train-s(train1,5)
@@ -170,7 +170,7 @@ This predicate holds if there is a train in the configuration with object identi
 
 We can use these two properties and others formulated in a similar fashion to formulate model checking properties which can be used to check the correctness of our modelling approach. We can define three safety conditions, one that states "train1 is in the cons state if and only it is at its max speed". The second states "if the speed of train1 is zero then it is either in the cons, stop or acc states and if the train is in the stop state then its speed is zero". The final states "it is not the case that there exists a state in which the speed of train1 is 5" (train1 has a max speed of 4). 
 
-\begin{lstlisting}
+\begin{lstlisting}[caption = The model checking commands for the correctness properties ]
 Correct1 := (mc initialstate2 |=t  
   ~(<> train-s(train1,5)) in time <= 100 .)
 Correct2 := (mc initialstate2 |=t 
@@ -240,12 +240,13 @@ Unfortunately the Maude LTL model checker cannot detect the congruence between d
 
 The following command is used to model check the safety property P1 for the junction example.
 
-\begin{lstlisting}
+\begin{lstlisting}[caption = The model checking command the point does not move property]
 (mc initialstate1 |=u [] (pointma(train1) => pointnormal)  .)
 \end{lstlisting}
 
 \section{Results}
 The following table presents the times taken to verify the three correctness properties and five safety properties MA1, MA2, MA3, P1 and P2:
+\medskip
 \begin{center}
 \begin{tabular}{c | c | c} 
 Safety Condition & Time Steps Checked & Time to Solve  \\ \hline
@@ -259,11 +260,11 @@ P1 (Junction)& untimed &7.488s \\
 P2 (Junction)& untimed & 6.636s \\
 \end{tabular}
 \end{center}
-
+\medskip
 The removal of non-determinism from the pentagon example has made timed model checking more successful. Prior to the \texttt{nondelta} operation being added the safety properties could only be checked for the first 30 time steps of the system.
 
 The no overlapping movement authorities safety property was verified using time bounded model checking over the modified pentagon example containing realistic speeds and distances. The following table shows how the difficulty of the model checking problem increases with search depth:
-
+\medskip
 \begin{center}
 \begin{tabular}{c | c | c} 
 Safety Condition & Time Steps Checked & Time to Solve  \\ \hline
@@ -274,7 +275,7 @@ MA1 (Realistic Pentagon) & 60 & 62.126s \\
 MA1 (Realistic Pentagon) & 70 & 79.948s \\
 \end{tabular}
 \end{center}
-
+\medskip
 Even though the Real Time Maude system is unable to perform un-timed model checking on this example it can still perform bounded model checking of a large enough portion of the state space for us to be satisfied that the system is safe.
 
 \section{Future Work}
